--- a/index.html
+++ b/index.html
@@ -1,62 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cronus</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Nunito:400,900" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cronus</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Nunito:400,900" rel="stylesheet">
+    <link type="image/png" href="./assets/logos/favicon.png" rel="icon">
+
+
 </head>
 <body>
-	<header>
-		<nav>
-			<div class="logo-container"> <!-- Left content: Company Logo -->
-				<img src="./assets/logos/logo-cronus.png" alt="Cronos logo is the letter C that has is repeated in four sizes from big to small.">
-			</div> 
-			<ul> <!-- Center contents: Main Navigation -->
-				<li><a href="#home">Home</a>
-					<div class="nav-hover"></div> <!-- Empty div for link hover -->
-				</li>
-				<li><a href="#about">About</a>
-					<div class="nav-hover"></div>
-				</li>
-				<li><a href="#services">Services</a>
-					<div class="nav-hover"></div>
-				</li>
-				<li><a href="#ourProject">Our Project</a>
-					<div class="nav-hover"></div>
-				</li>      
-				<li><a href="#page">Page</a>
-					<div class="nav-hover"></div>
-				</li>      
-				<li><a href="#blog">Blog</a>
-					<div class="nav-hover"></div>
-				</li>      
-				<li><a href="#content">Content</a>
-					<div class="nav-hover"></div>
-				</li>             
-			</ul>
-			<div class="right-container"> <!-- Right contents: Search, Country and Language -->
-				<i class="testing fas fa-search fa-2x"></i>
-				<div class="england">
-						<i class="far fa-circle fa-2x"></i></i>
-				</div>
-				<a href="#something">EN</a>
-			</div>
-		</nav>
-	<div class="header-wrapper">
-		<h1>We provide the best<span class ="italics"> service</span> for business</h1>
-		<h3>Business Communication is the sharing</h3>
-		<a href="#learnmore">Explore more</a>
-	</div>
-	</header>
+  <header>
+    <div class="wrapper">
+      <div class="flex-container vertical">  <!-- Main Flexbox: Column -->
+        <div class="flex-container horizontal">
+          <div class="logo-container"> <!-- First Row of Column: Logo, Navigation and Search/Country Content -->
+           <img src="./assets/logos/logo-cronus.png" alt="Cronos logo is the letter C that has is repeated in four sizes from big to small.">
+          </div> 
+          <nav>
+           <ul> <!-- Main Navigation -->
+            <li><a href="#home">Home</a>
+              <div class="nav-hover"></div> <!-- Empty div for link hover -->
+            </li>
+            <li><a href="#about">About</a>
+              <div class="nav-hover"></div>
+            </li>
+            <li><a href="#services">Services</a>
+              <div class="nav-hover"></div>
+            </li>
+            <li><a href="#ourProject">Our Project</a>
+              <div class="nav-hover"></div>
+            </li>      
+            <li><a href="#page">Page</a>
+              <div class="nav-hover"></div>
+            </li>      
+            <li><a href="#blog">Blog</a>
+              <div class="nav-hover"></div>
+            </li>      
+            <li><a href="#content">Content</a>
+              <div class="nav-hover"></div>
+            </li>             
+          </ul>
+          </nav>
+          <div class="right-container"> <!-- Search, Country and Language -->
+            <i class="testing fas fa-search fa-2x"></i>
+            <div class="england">
+                <svg xmlns="http://www.w3.org/2000/svg" id="flag-icon-css-gb" viewBox="0 0 512 512">
+  <defs>
+    <clipPath id="a">
+      <path fill-opacity=".7" d="M250 0h500v500H250z"/>
+    </clipPath>
+  </defs>
+  <g clip-path="url(#a)" transform="translate(-256) scale(1.024)">
+    <g stroke-width="1pt">
+      <path fill="#012169" d="M0 0h1000v500H0z"/>
+      <path fill="#fff" d="M0 0v55.9L888.2 500H1000v-55.9L111.8.1H0zm1000 0v55.9L111.8 500H0v-55.9L888.2 0H1000z"/>
+      <path fill="#fff" d="M416.7 0v500h166.6V0H416.7zM0 166.7v166.6h1000V166.7H0z"/>
+      <path fill="#c8102e" d="M0 200v100h1000V200H0zM450 0v500h100V0H450zM0 500l333.3-166.7H408L74.5 500H0zM0 0l333.3 166.7h-74.5L0 37.3V0zm592.1 166.7L925.5 0h74.5L666.7 166.7H592zm408 333.3L666.6 333.3h74.5L1000 462.7V500z"/>
+    </g>
+  </g>
+</svg>
+            </div>
+            <a href="#something">EN</a>
+          </div>
+        </div>
+        <div class="flex-container horizontal" > <!-- Second Row of Column: Contact, Headers and Date? -->
+          <div class="left-middle">
+            <p>info@moontheme.net</p>
+            <p>+3423 4455 3333</p>
+           </div>
+          <div class="mid-middle">
+            <h1>We provide the best<span class ="italics"> service</span> for business</h1>
+            <h3>Business Communication is the sharing</h3>
+            <a href="#learnmore">Explore more</a>
+          </div>
+          <div class="right-middle">
+            <p class="strikethrough">01</p>
+            <p>02</p>
+            <p>03</p>
+          </div>
+        </div>
+        <div class="scroll"> <!-- Third Row of Column: Scroll Style Sugar -->
+          <i class="fade1 fas fa-circle"></i>
+          <i class="fade2 fas fa-circle"></i>
+          <i class="fas fa-circle"></i>
+          <p>Scroll</p>
+        </div>
+      </div>    
+    </div>
+    <div class="page-separation"></div>
+  </header>
+  
+  <main>
+    <section class="our-projects">
+      <h3 class="color-pink">Our projects</h3>
+      <h2>Discover the <span class="italics">most fascinating</span> projects for our clients</h2>
+      <p>Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
+      <div class="filter">
+        <ul>
+          <li><a href="#filter">All</a></li>
+          <li><a href="#filter">Consulting</a></li>
+          <li><a href="#filter">Finance</a></li>
+          <li><a href="#filter">Marketing</a></li>
+        </ul>
+      </div>
+      <div class="gallery-container">
+        <ul class="gallery">
+          <li>
+            <figure>
+              <img src="./assets/image-4.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="large-image">
+            <figure>
+              <img src="./assets/image-5.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-6.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-7.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="large-image">
+            <figure>
+              <img src="./assets/image-8.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-9.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-10.jpeg" alt="">
+               <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-11.jpeg" alt="">
+              <figcaption>
+                <div class= "plus"></div>
+                <h3>Branding Marketing</h3>
+                <p>Magni dolores eos qui ratione</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </div>
+      <div class="page-separation"></div>
 
-	<main>
-		
-	</main>
+    </section>
 
-	<footer>
 
-	</footer>
+  </main>
+
+
 </body>
 </html>
