--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
           <div class="right-container"> <!-- Search, Country and Language -->
             <i class="testing fas fa-search fa-2x"></i>
             <div class="england">
-                <svg xmlns="http://www.w3.org/2000/svg" id="flag-icon-css-gb" viewBox="0 0 512 512">
-  <defs>
-    <clipPath id="a">
-      <path fill-opacity=".7" d="M250 0h500v500H250z"/>
-    </clipPath>
-  </defs>
-  <g clip-path="url(#a)" transform="translate(-256) scale(1.024)">
-    <g stroke-width="1pt">
-      <path fill="#012169" d="M0 0h1000v500H0z"/>
-      <path fill="#fff" d="M0 0v55.9L888.2 500H1000v-55.9L111.8.1H0zm1000 0v55.9L111.8 500H0v-55.9L888.2 0H1000z"/>
-      <path fill="#fff" d="M416.7 0v500h166.6V0H416.7zM0 166.7v166.6h1000V166.7H0z"/>
-      <path fill="#c8102e" d="M0 200v100h1000V200H0zM450 0v500h100V0H450zM0 500l333.3-166.7H408L74.5 500H0zM0 0l333.3 166.7h-74.5L0 37.3V0zm592.1 166.7L925.5 0h74.5L666.7 166.7H592zm408 333.3L666.6 333.3h74.5L1000 462.7V500z"/>
-    </g>
-  </g>
-</svg>
+              <svg xmlns="http://www.w3.org/2000/svg" id="flag-icon-css-gb" viewBox="0 0 512 512">
+                <defs>
+                  <clipPath id="a">
+                    <path fill-opacity=".7" d="M250 0h500v500H250z"/>
+                  </clipPath>
+                </defs>
+                <g clip-path="url(#a)" transform="translate(-256) scale(1.024)">
+                  <g stroke-width="1pt">
+                    <path fill="#012169" d="M0 0h1000v500H0z"/>
+                    <path fill="#fff" d="M0 0v55.9L888.2 500H1000v-55.9L111.8.1H0zm1000 0v55.9L111.8 500H0v-55.9L888.2 0H1000z"/>
+                    <path fill="#fff" d="M416.7 0v500h166.6V0H416.7zM0 166.7v166.6h1000V166.7H0z"/>
+                    <path fill="#c8102e" d="M0 200v100h1000V200H0zM450 0v500h100V0H450zM0 500l333.3-166.7H408L74.5 500H0zM0 0l333.3 166.7h-74.5L0 37.3V0zm592.1 166.7L925.5 0h74.5L666.7 166.7H592zm408 333.3L666.6 333.3h74.5L1000 462.7V500z"/>
+                  </g>
+                </g>
+              </svg>
             </div>
             <a href="#something">EN</a>
           </div>
@@ -96,12 +96,12 @@
   
   <main>
     <section class="our-projects">
-      <h3 class="color-pink">Our projects</h3>
+      <h3 class="color-pink section-title">Our projects</h3>
       <h2>Discover the <span class="italics">most fascinating</span> projects for our clients</h2>
       <p>Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
       <div class="filter">
         <ul>
-          <li><a href="#filter">All</a></li>
+          <li><a class="no-hover" href="#filter">All</a></li>
           <li><a href="#filter">Consulting</a></li>
           <li><a href="#filter">Finance</a></li>
           <li><a href="#filter">Marketing</a></li>
@@ -191,10 +191,142 @@
           </li>
         </ul>
       </div>
-      <div class="page-separation"></div>
-
     </section>
 
+    <section class="our-expert">
+      <h3 class="color-pink section-title">Our expert</div></h3>
+      <h2>Our team of experienced professionals to <span class="italics">get fast profit</span></h2>
+      <p class="fix">Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
+      <div class="expert-container">
+        <ul class="expert">
+          <li>
+            <figure>
+              <img src="./assets/image-12.jpg" alt="">
+              <figcaption class="social-hover">
+                <ul class="social">
+                  <li>
+                    <a href="#facebook">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#twitter">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#googleplus">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#instagram">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+            <h3 class="color-pink">Joht Herry</h3>
+            <p>CEO Cronus Business</p> 
+          </li>
+          <li class="center-image">
+            <figure>
+              <img src="./assets/image-13.jpg" alt="">
+              <figcaption class="social-hover">
+                <ul class="social">
+                  <li>
+                    <a href="#facebook">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#twitter">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#googleplus">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#instagram">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+            <h3 class="color-pink">Hellen Marry</h3>
+            <p>Creative director</p>
+          </li>
+          <li>
+            <figure>
+              <img src="./assets/image-14.jpg" alt="">
+              <figcaption class="social-hover">
+                <ul class="social">
+                  <li>
+                    <a href="#facebook">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#twitter">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#googleplus">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#instagram">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+            <h3 class="color-pink">David jame</h3>
+            <p>Business Manager</p> 
+          </li>
+        </ul>
+      </div>
+      <div class="score">
+        <ul>
+          <li class="score-section">
+            <h3>Marketing Online</h3>
+            <p>75%</p>
+            <div class="score-bar">
+              <div class="marketing color"></div>
+            </div>
+          </li>
+          <li class="score-section">
+            <h3>Design Consultant</h3>
+            <p>85%</p>
+            <div class="score-bar">
+              <div class="design color"></div>
+            </div>
+          </li>
+          <li class="score-section">
+            <h3>Deliver Business</h3>
+            <p>68%</p>
+            <div class="score-bar">
+              <div class="deliver color"></div>
+            </div>
+          </li>
+          <li class="score-section">
+            <h3>Field Manager</h3>
+            <p>80%</p>
+            <div class="score-bar">
+              <div class="field color"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </main>
 
