Fourth section completed with some bad code! FIX!

--- a/index.html
+++ b/index.html
@@ -328,8 +328,79 @@
       </div>
     </section>
 
-  </main>
+    <section class="blue-background">
+      <div class="blog-news">
+        <h3 class="color-pink section-title">Blog &amp news</h3>
+        <h2>Keep always updated <span class="italics">with our fresh</span> blog posts</h2>
+        <div class="blog-post">
+          <ul>
+            <li>
+              <div class="top-blog">
+                <img src="./assets/image-15.jpg" alt="">
+              </div>
+              <div class="bottom-blog">
+                <div class="bottom-blog-wrapper">
+                  <h3 class="color-pink">August 6, 2017</h3>
+                  <h2>Facilisis rutrum aenean</h2>
+                  <p>In eros a justo facilisis rutrum. Aenean id ullamcorper libero. Vestibulum imperdiet </p>
+                  <div class="writer">
+                    <div class="photo">
+                      <img class="first" src="./assets/image-18.jpg" alt="">
+                    </div>
+                    <h3 class="by-who">By Jont kook</h3>
+                  </div>
+                 </div>
+              </div>
+            </li>
+            <li class="center-image">
+              <div class="top-blog">
+                <img src="./assets/image-16.jpg" alt="">
+              </div>
+              <div class="bottom-blog">
+                <div class="bottom-blog-wrapper">
+                  <h3 class="color-pink">August 6, 2017</h3>
+                  <h2>Donec faucibus erat</h2>
+                  <p>Nunc in eros a justo facilisis rutru Aenean id ullamcorper libero</p>
+                  <div class="writer">
+                    <div class="photo">
+                      <img class="second" src="./assets/image-19.jpg" alt="">
+                    </div>
+                    <h3 class="by-who">By Jont kook</h3>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="top-blog">
+                <img src="./assets/image-17.jpg" alt="">
+              </div>
+              <div class="bottom-blog">
+                <div class="bottom-blog-wrapper">
+                  <h3 class="color-pink">August 6, 2017</h3>
+                  <h2>Aenean id ullamcorper</h2>
+                  <p>Facilisis rutrum aenean id ullamcorper libero. Vestibulum imperdiet nibh vel</p>
+                  <div class="writer">
+                    <div class="photo">
+                      <img class="third" src="./assets/image-20.jpg" alt="">
+                    </div>
+                    <h3 class="by-who">By Jont kook</h3>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
+  </main>
+  <footer>
+    
+  </footer>
 
 </body>
+
+<!-- 
+     <div id="triangle-up"></div>
+      <div id="parallelogram"></div> -->
 </html>
