Fix footer - DRYer code but not completed!

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section class="our-expert"> <!-- Start of Section 3: Our Expert -->
       <h3 class="color-pink section-title">Our expert</div></h3>
       <h2>Our team of experienced professionals to <span class="italics">get fast profit</span></h2>
-      <p class="fix">Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
+      <p class="fix-spacing">Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
       <div class="expert-container">  
         <ul class="expert-gallery"> <!-- Start of the Experts Gallery --> 
           <li>
@@ -275,28 +275,28 @@
             <h3>Marketing Online</h3>
             <p>75%</p>
             <div class="score-bar"> <!-- Empty div for gray background -->
-              <div class="marketing color"></div> <!-- Empty div for gradient bar effect -->
+              <div class="marketing score-color"></div> <!-- Empty div for gradient bar effect -->
             </div>
           </li>
           <li class="score-section">
             <h3>Design Consultant</h3>
             <p>85%</p>
             <div class="score-bar">
-              <div class="design color"></div>
+              <div class="design score-color"></div>
             </div>
           </li>
           <li class="score-section">
             <h3>Deliver Business</h3>
             <p>68%</p>
             <div class="score-bar">
-              <div class="deliver color"></div>
+              <div class="deliver score-color"></div>
             </div>
           </li>
           <li class="score-section">
             <h3>Field Manager</h3>
             <p>80%</p>
             <div class="score-bar">
-              <div class="field color"></div>
+              <div class="field score-color"></div>
             </div>
           </li>
         </ul>
@@ -316,11 +316,11 @@
               <div class="bottom-blog">
                 <div class="bottom-blog-wrapper">
                   <h3 class="color-pink">August 6, 2017</h3>
-                  <h2>Facilisis rutrum aenean</h2>
+                  <a href="#blogpost1"><h2>Facilisis rutrum aenean</h2></a>
                   <p>In eros a justo facilisis rutrum. Aenean id ullamcorper libero. Vestibulum imperdiet </p>
                   <div class="writer"> <!-- Bottom of blog flex container -->
                     <div class="photo">
-                      <img class="first" src="./assets/image-18.jpg" alt="">
+                      <img class="first-author" src="./assets/image-18.jpg" alt="">
                     </div>
                     <h3 class="by-who">By Jont kook</h3>
                   </div>
@@ -334,11 +334,11 @@
               <div class="bottom-blog">
                 <div class="bottom-blog-wrapper">
                   <h3 class="color-pink">August 6, 2017</h3>
-                  <h2>Donec faucibus erat</h2>
+                  <a href="#blogpost2"><h2>Donec faucibus erat</h2></a>
                   <p>Nunc in eros a justo facilisis rutru Aenean id ullamcorper libero</p>
                   <div class="writer">
                     <div class="photo">
-                      <img class="second" src="./assets/image-19.jpg" alt="">
+                      <img class="second-author" src="./assets/image-19.jpg" alt="">
                     </div>
                     <h3 class="by-who">By Jont kook</h3>
                   </div>
@@ -352,11 +352,11 @@
               <div class="bottom-blog">
                 <div class="bottom-blog-wrapper">
                   <h3 class="color-pink">August 6, 2017</h3>
-                  <h2>Aenean id ullamcorper</h2>
+                  <a href="#blogpost3"><h2>Aenean id ullamcorper</h2></a>
                   <p>Facilisis rutrum aenean id ullamcorper libero. Vestibulum imperdiet nibh vel</p>
                   <div class="writer">
                     <div class="photo">
-                      <img class="third" src="./assets/image-20.jpg" alt="">
+                      <img class="third-author" src="./assets/image-20.jpg" alt="">
                     </div>
                     <h3 class="by-who">By Jont kook</h3>
                   </div>
@@ -415,7 +415,8 @@
               </div>
             </div>
           </a>
-          <p>Nam ac elit a ante commodo tristique. Condimentum a vehicula a, hendrerit ac nisi Lorem ipsum dolor http://t.con/3lG2RTn3 </p>
+          <p>Nam ac elit a ante commodo tristique. Condimentum a vehicula a, hendrerit ac nisi Lorem ipsum dolor</p>
+          <a href="#shortlink">http://t.con/3lG2RTn3</a>
           <div class="clock-date">
              <i class="far fa-clock"></i>
              <p>Sep. 29, 2017</p>
