--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#blog">Blog</a>
               <div class="nav-hover"></div>
             </li>      
-            <li><a href="#content">Content</a>
+            <li><a href="#contact">Contact</a>
               <div class="nav-hover"></div>
             </li>             
           </ul>
@@ -93,8 +93,8 @@
     </div>
   </header> <!-- End of Section 1: Header -->
   
-  <main> <!-- Start of Main content -->
-    <section class="our-projects"> <!-- Start of Section 2: Our Projects -->
+  <main id="learnmore"> <!-- Start of Main content -->
+    <section id="ourProject" class="our-projects"> <!-- Start of Section 2: Our Projects -->
       <h3 class="color-pink section-title">Our projects</h3>
       <h2>Discover the <span class="italics">most fascinating</span> projects for our clients</h2>
       <p>Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
@@ -192,7 +192,7 @@
       </div>  <!-- End of the Gallery --> 
     </section> <!-- End of Section 2: Our Projects -->
 
-    <section class="our-expert"> <!-- Start of Section 3: Our Expert -->
+    <section id="page" class="our-expert"> <!-- Start of Section 3: Our Expert -->
       <h3 class="color-pink section-title">Our expert</div></h3>
       <h2>Our team of experienced professionals to <span class="italics">get fast profit</span></h2>
       <p class="fix-spacing">Veritatis et quasi architect° beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fiigit</p>
@@ -303,7 +303,7 @@
       </div> <!-- End of the score section -->
     </section> <!-- End of Section 3: Our Expert -->
 
-    <section class="blog-background"> <!-- Start of Section 4: Blog & News -->
+    <section id="blog" class="blog-background"> <!-- Start of Section 4: Blog & News -->
       <div class="blog-news"> <!-- Blog & News wrapper -->
         <h3 class="color-pink section-title">Blog &amp news</h3>
         <h2>Keep always updated <span class="italics">with our fresh</span> blog posts</h2>
@@ -369,7 +369,7 @@
     </section> <!-- End of Section 4: Blog & News -->
   </main> <!-- End of Main content -->
   
-  <footer> <!-- Start of the Footer -->
+  <footer id="contact"> <!-- Start of the Footer -->
     <div class="footer-wrapper"> <!-- Footer wrapper to set the maximum width of the footer -->
       <div class="footer-flex"> <!-- Start of the flex container for the top half of the footer -->
         <div class="left"> <!-- Start of the container for the left column of the footer -->
