Added CSS Legend and rearranged a few things

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <a href="#learnmore" class="skip-link">Skip to main content.</a>
+  <a href="#learnmore" class="skip-link">Skip to main content.</a> <!-- Accessibility skip link anchor -->
   <header>
     <div class="header-wrapper"> <!-- Start of Section 1: Header -->
       <div class="flex-container vertical">  <!-- Header Main Flexbox: Column -->
@@ -378,7 +378,7 @@
     </section> <!-- End of Section 4: Blog & News -->
   </main> <!-- End of Main content -->
   
-  <footer id="contact"> <!-- Start of the Footer -->
+  <footer id="contact"> <!-- Start of Section 5: Footer -->
     <div class="footer-wrapper"> <!-- Footer wrapper to set the maximum width of the footer -->
       <div class="footer-flex"> <!-- Start of the flex container for the top half of the footer -->
         <div class="left"> <!-- Start of the container for the left column of the footer -->
@@ -450,7 +450,7 @@
       </div> <!-- End of the flex container for the top half of the footer -->
     </div> <!-- End of Footer wrapper -->
     <p class="copyright">Copyright &copy; Cronus - all rights reserved. Made by Moontheme</p>
-  </footer> <!-- End of the footer -->
+  </footer> <!-- End of Section 5: Footer -->
  
   <script> /* Script to make the scroll transition better */
     $(function() {
