--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
                   </div>
                 </div>
               </div>
-            </li> <!-- Second Blog Post -->
-            <li class="center-image">
-              <div class="top-blog">
+            </li> 
+            <li class="center-image"> <!-- Second Blog Post -->
+              <div class="top-blog"> <!-- This image is 1px smaller. does weird things when inspected. -->
                 <img src="./assets/image-16.jpg" alt=" Man writing in a notebook beside an open computer.">
               </div>
               <div class="bottom-blog">
